refactor for the query string interpreter